--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==23.2.0
 blinker==1.7.0
 cachetools==5.3.3
 certifi==2024.2.2
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -32,12 +33,15 @@ pyarrow==15.0.1
 pydeck==0.8.1b0
 Pygments==2.17.2
 pymongo==4.6.2
+PyMuPDF==1.23.26
+PyMuPDFb==1.23.22
 pyparsing==3.1.2
 pyperclip==1.8.2
 pytesseract==0.3.10
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.33.0
+reportlab==4.1.0
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
